# otuscpp-hw4

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  README_8md.html  annotated.html  classes.html  files.html  functions.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherits.html  main.cpp  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  md_README.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemy.html  namespaces.html  pages.html  printer.h  (+47 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_2.js  defines_0.js  defines_2.js  defines_4.js  defines_5.js  files_3.js  functions_0.js  functions_2.js  pages_1.html  search.js  typedefs_0.js  typedefs_2.js  variables_0.js
